# checklist_master

./: pyproject.toml
checklist_master/: blocos_01.py  estrutura.md
